--- a/vignettes/FRACwas.Rmd
+++ b/vignettes/FRACwas.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Fractions of matrices in subcompartments"
-author: "JS"
+title: "Fractions of phases in subcompartments"
+author: "JS & JQ"
 date: "`r Sys.Date()`"
 output: github_document
 ---
@@ -15,33 +15,37 @@ knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct s
 ## Matrix parts of a sub-compartment
 A Subcompartment has a main matrix(medium); for soils and sediment this is "solids". But both also contain water, and soil also contains a fraction of air, as wel as water. These matrices play a part in the exchange of substances. The fraction of the non-main matrices are in the data, named subFRACw, subFRACa, and subFRACs. The main fraction of the subcompartment is calculated as the remainder. All fractions are are determined by three variable defining functions. For example for soils and sediments:
 
-```{r}
-source("baseScripts/initTestWorld.R")
-source("newAlgorithmScripts/v_FRACa.R")
-source("newAlgorithmScripts/v_FRACw.R")
-source("newAlgorithmScripts/v_FRACs.R")
-FRACs
+```{r message=FALSE, warning=FALSE, include=FALSE}
+try(source("baseScripts/initTestWorld.R"))
 ```
 
 ## Use FRAC's for 
-This generalisation is extended to the solids and water fractions in air, formerly known as FRears and FRearw. Note that the fraction of air in air may appear as rounded to, but not equal to 1.0.
+This generalisation is extended to the solids and water fractions in air, formerly known as FRACears and FRACearw.
+FRACaers -> FRACs for air, FRACaerw -> FRACw for air.
+
 ```{r}
+
+World$fetchData("FRACa")
+World$fetchData("FRACs")
+World$fetchData("FRACw")
+
 Fs <- World$NewCalcVariable("FRACs")
 World$CalcVar("FRACs")
-source("newAlgorithmScripts/v_FRACa.R")
-World$NewCalcVariable("FRACa")
-capture.output(World$CalcVar("FRACa"))
-capture.output(World$NewCalcVariable("FRACw"))
-capture.output(World$CalcVar("FRACw"))
+
 
 ```
-An overview for the scale Regional
+An overview for the scale Regional. The NA are not calculated, but also not needed in further calculations of the partitioning between these phases.
+
 ```{r}
 allFrac <- Reduce(merge, list(World$fetchData("FRACa"), World$fetchData("FRACw"), World$fetchData("FRACs"))) %>%
   dplyr::filter(Scale == "Regional") %>%
   pivot_longer(c(FRACa, FRACw, FRACs))
 
+allFrac <- full_join(as_tibble(World$fetchData("FRACa")),
+                     as_tibble(World$fetchData("FRACw")), by = c("SubCompart","Scale")) |> 
+  full_join(as_tibble(World$fetchData("FRACs"))) |> filter(Scale=="Regional") |> print()
 ```
+
 ## colloidal and suspended matter in waters
 For solids in water SB distinguishes colloidal and suspended matter. Therefore subFRACs for waters is not in the data; use the data for "COL" and "SUSP" for these quantities. These quantities are not used to calculate a "FRACw" for waters.
 ```{r}
