--- a/vignettes/7. Inter media Transfer Processes/Deposition Particulate.Rmd
+++ b/vignettes/7. Inter media Transfer Processes/Deposition Particulate.Rmd
@@ -80,11 +80,56 @@ World$fetchData("SubCompartName")
 
 ## Calculation of Dry Deposition rate constant for particulates
 
+The implementation follows the LOTOS-EUROS v2.0 2016 guidance for dry deposition of particles. This does mean there might be small deviations from the current implementation in SimpleBox4nano xlsx.
+
 ```{r k_DryDeposition, warning=FALSE, paged.print=TRUE}
 
 World$FromDataAndTo("k_DryDeposition")
 testProc <- World$NewProcess("k_DryDeposition")
 testProc$execute()
+
+```
+
+## Calculation of Wet Deposition rate constant for particulates
+
+```{r k_CWscavenging}
+
+# #init default core (World) with classic states, and classic kaas
+# substance <- "nAg_10nm"  #use a nano material, otherwise it only encounters Molecular
+# excelReference <- "data/20210331 SimpleBox4nano_rev006.xlsx"
+# source("baseScripts/initTestWorld.R")
+# 
+# lapply(c("rho_species", "rad_species"), function(FuName){
+#   World$NewCalcVariable(FuName)
+#   World$CalcVar(FuName)
+# })
+# World$fetchData("Temp")
+
+World$fetchData("NaturalRho")
+World$fetchData("SettlingVelocity") 
+World$fetchData("rhoMatrix")
+World$fetchData("RAINrate")
+World$fetchData("FRACtwet")
+World$fetchData("tdry")
+World$fetchData("twet")
+World$fetchData("COLLECTeff")
+
+World$FromDataAndTo("k_CWscavenging")
+testProc <- World$NewProcess("k_CWscavenging")
+debugonce(k_CWscavenging)
+testProc$execute(debugAt = list(Scale = "Regional"))
+testProc$execute()
+debug(testProc$execute())
+
+#calculation of kaas is by executing a process
+testClass <- World$NewProcess("k_CWscavenging")
+testClass$execute(list())
+
+
+
+# debug(testClass$execute)
+# testClass$execute(debugAt = list()) #an empty list always triggers
+#testVar$execute(debugAt = list(Scale = "Regional", SubCompart = "air"))
 
 ```
 
