--- a/vignettes/Deposition.Rmd
+++ b/vignettes/Deposition.Rmd
@@ -53,24 +53,23 @@ World$NewCalcVariable("FRACs")
 World$CalcVar("FRACs")
 # World$fetchData()
 
-FromData$RHOsolid <- with(World$fetchData("rhoMatrix"),
+RHOsolid <- with(World$fetchData("rhoMatrix"),
                                     rhoMatrix[SubCompart == "othersoil"])
 
-source("/rivm/s/quikj/SimpleBox_dev/sbooScripts/newAlgorithmScripts/f_kdegcalc.R")
-kdeg.sediment <- kdegcalc(Q.10 = World$fetchData("Q.10"), 
+source("newAlgorithmScripts/f_kdegcalc.R")
+kdeg.sediment <- f_kdegcalc(Q.10 = World$fetchData("Q.10"), 
                           Ksw = World$fetchData("Ksw"), 
                           Biodeg = "r", 
                           C.OHrad.n = World$fetchData("C.OHrad.n"), 
                           Ea.OHrad = World$fetchData("Ea.OHrad"), 
                           k0.OHrad = World$fetchData("k0.OHrad"),
                           CorgStandard = World$fetchData("CorgStandard"), 
-                          RHOsolid = World$fetchData("RHOsolid"),
+                          RHOsolid = RHOsolid,
                           Matrix = "sediment")
 
-
-FromData <- World$fetchData("Globals")
-FromData$kdeg.sediment <- kdeg.sediment
-World$UpdateData(FromData, keys = T, TableName = "Globals")
+#FromData <- World$fetchData("Globals")
+#FromData$kdeg.sediment <- kdeg.sediment
+#World$UpdateData(FromData, keys = T, TableName = "Globals")
 
 World$NewCalcVariable("Kp")
 World$CalcVar("Kp")
@@ -98,8 +97,8 @@ World$CalcVar("FRingas")
 
 # source("newAlgorithmScripts/k_Degradation.R")
 
-# Read in function to derive the temperature correction factor
-source("newAlgorithmScripts/f_Tempfactor.wsds.R")
+# Read in function to derive the temperature correction factor, now a SB variable
+Tempfactor
 
 # World$NewCalcVariable("k_Degradation")
 # World$CalcVar("k_Degradation")
