Update github vignette for https://github.com/rivm-syso/SBoo/issues/23

--- a/vignettes/5. Characteristics of the Environment/FRACwas.Rmd
+++ b/vignettes/5. Characteristics of the Environment/FRACwas.Rmd
@@ -7,8 +7,10 @@ editor_options:
 ---
 
 
-```{r initiate message=FALSE, warning=FALSE, include=FALSE}
+```{r message=FALSE, warning=FALSE, include=FALSE}
+
 try(source("baseScripts/initTestWorld.R"))
+
 ```
 
 ## Volume fraction of water or air phase in a matrix
