testScripts/initPartitioningVariables.R is better and copies should be avoided

--- a/vignettes/6. Loss processes/Removal.Rmd
+++ b/vignettes/6. Loss processes/Removal.Rmd
@@ -45,89 +45,7 @@ World$fetchData("kdeg.sediment")
 World$fetchData("kdeg.water")
 
 # This needs to be calculated first:
-World$NewCalcVariable("FRorig")
-World$CalcVar("FRorig")
-World$NewCalcVariable("FRorig_spw")
-World$CalcVar("FRorig_spw")
-World$NewCalcVariable("FRACa")
-World$CalcVar("FRACa")
-World$NewCalcVariable("FRACw")
-World$CalcVar("FRACw")
-World$NewCalcVariable("FRACs")
-World$CalcVar("FRACs")
-# World$fetchData()
-
-# debugonce(fKsw)
-
-KswModelled <- f_Ksw(Kow = World$fetchData("Kow"), 
-                    pKa, 
-                    CorgStandard = World$fetchData("CorgStandard"), 
-                    a = with(World$fetchData("QSARtable"), 
-                             a[QSAR.ChemClass == World$fetchData("ChemClass")]), 
-                    b = with(World$fetchData("QSARtable"), 
-                             b[QSAR.ChemClass == World$fetchData("ChemClass")]), 
-                    ChemClass = World$fetchData("ChemClass"),
-                    RHOsolid = with(World$fetchData("rhoMatrix"),
-                                    rhoMatrix[SubCompart == "othersoil"]),
-                    alt_form = F)
-
-Ksw.alt <- f_Ksw(Kow = World$fetchData("Kow"), 
-                    pKa = 7, 
-                    CorgStandard = World$fetchData("CorgStandard"), 
-                    a = with(World$fetchData("QSARtable"), 
-                             a[QSAR.ChemClass == World$fetchData("ChemClass")]), 
-                    b = with(World$fetchData("QSARtable"), 
-                             b[QSAR.ChemClass == World$fetchData("ChemClass")]), 
-                    ChemClass = World$fetchData("ChemClass"),
-                    RHOsolid = with(World$fetchData("rhoMatrix"),
-                                    rhoMatrix[SubCompart == "othersoil"]),
-                    alt_form = T, KswModelled)
-
-FromData <- World$fetchData("Globals")
-FromData$Ksw <- KswModelled
-FromData$Ksw.alt <- Ksw.alt
-FromData$RHOsolid <- with(World$fetchData("rhoMatrix"),
-                                    rhoMatrix[SubCompart == "othersoil"])
-World$UpdateData(FromData, keys = T, TableName = "Globals")
-
-# kdeg.sediment <- f_kdegcalc(Q.10 = World$fetchData("Q.10"),
-#                           Ksw = World$fetchData("Ksw"), 
-#                           Biodeg = "r", 
-#                           C.OHrad.n = World$fetchData("C.OHrad.n"), 
-#                           Ea.OHrad = World$fetchData("Ea.OHrad"), 
-#                           k0.OHrad = World$fetchData("k0.OHrad"),
-#                           CorgStandard = World$fetchData("CorgStandard"), 
-#                           RHOsolid = World$fetchData("RHOsolid"),
-#                           Matrix = "sediment")
-# 
-# FromData <- World$fetchData("Globals")
-# FromData$kdeg.sediment <- kdeg.sediment
-# World$UpdateData(FromData, keys = T, TableName = "Globals")
-
-World$NewCalcVariable("Kp")
-World$CalcVar("Kp")
-
-World$NewCalcVariable("D")
-World$CalcVar("D")
-World$NewCalcVariable("KpCOL")
-World$CalcVar("KpCOL")
-
-World$NewCalcVariable("Kacompw")
-World$CalcVar("Kacompw")
-World$NewCalcVariable("Kscompw")
-World$CalcVar("Kscompw")
-
-World$NewCalcVariable("FRinw")
-World$CalcVar("FRinw")
-
-World$NewCalcVariable("Kaerw")
-World$CalcVar("Kaerw")
-World$NewCalcVariable("Kaers")
-World$CalcVar("Kaers")
-
-World$NewCalcVariable("FRingas")
-World$CalcVar("FRingas")
-
+source("testScripts/initPartitioningVariables.R")
 ```
 
 ### Degradation
